<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ParkShare</string>
    <string name="find_parking_spot">Find parking spot</string>
    <string name="offer_parking_spot">Offer parking spot</string>
    <string name="title_activity_find_maps">Find parking location space</string>
    <string name="error_retrieve_offers">There was an error while retrieving offers: </string>
    <string name="expired">Expired</string>
    <string name="parking_validity_title">Available for %1$d minutes</string>
    <string name="error_retrieve_parking_locations">There was an error while retrieving parking locations</string>
    <string name="parking_locations_activity_title">Manage parking locations</string>
    <string name="add_parking_location">Add parking location</string>
    <string name="position">Position</string>
    <string name="enter_a_name_for_this_location">Enter a name for this location</string>
    <string name="save">Save</string>
    <string name="manage_parking_edit_title">Manage parking</string>
    <string name="error_adding_marker">Error while adding marker</string>
    <string name="offers">Offers</string>
    <string name="validity">Validity</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="add_offer_activity_title">Add offer</string>
    <string name="add_offer">Add offer</string>
    <string name="duration">Duration:</string>
    <string name="amount_minutes_format">%1$d minutes</string>
    <string name="error_retrieve_data">There was an error while trying to retrieve data: </string>
    <string name="error_sending_data">There was an error while trying to send data: </string>
    <string name="offer_added">Offer has been added</string>
    <string name="cancel">Cancel</string>
    <string name="park_here">Park here</string>
    <string name="booked_offer">Booked offer successfully</string>
    <string name="your_car_parked_here">Your car is parked here</string>
    <string name="starting">Starting from:</string>
    <string name="parking_duration">Parking duration</string>
    <string name="leave_parking">Leave parking</string>
    <string name="error_save_location">"There was an error while trying to save parking: "</string>
    <string name="leave_parking_dialog_message">Do you want to leave the parking?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login_error_message">Login error: </string>
    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="confirm_logout">Do you want to logout?</string>
</resources>
