<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/default_padding">

    <TextView
        android:id="@+id/validity_label"
        style="@style/label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/validity" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/from_label"
            style="@style/label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from" />

        <TextView
            android:id="@+id/from_text"
            style="@style/label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="20 May 22:00" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/to_label"
            style="@style/label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to" />

        <TextView
            android:id="@+id/to_text"
            style="@style/label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="21 May 08:00" />
    </LinearLayout>

    <Button
        android:id="@+id/add_offer"
        style="@style/action_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_offer" />
</LinearLayout>
