<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/top_part"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/position" />

        <LinearLayout
            android:id="@+id/map_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical">

            <fragment
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="220dp" />
        </LinearLayout>

        <TextView
            style="@style/label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/starting" />

        <TextView
            android:id="@+id/starting_text"
            style="@style/label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parking_duration" />

        <TextView
            android:id="@+id/parking_duration_text"
            style="@style/label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorRed"
            tools:text="15 minute" />
    </LinearLayout>


    <Button
        android:id="@+id/leave_parking"
        style="@style/leave_parking_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/leave_parking" />

</RelativeLayout>